# 15-GolangProject/gin-gorm-practice/docs/swagger.yaml
@@ -1,6 +1,28 @@
 info:
   contact: {}
 paths:
+  /login:
+    post:
+      description: 用户登录
+      parameters:
+      - description: username
+        in: formData
+        name: username
+        type: string
+      - description: password
+        in: formData
+        name: password
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code":"200","msg":""}
+          schema:
+            type: string
+      summary: 用户登录
+      tags:
+      - 公共方法
   /problem-detail:
     get:
       description: 问题详情
@@ -47,6 +69,24 @@ paths:
           schema:
             type: string
       summary: 问题列表
+      tags:
+      - 公共方法
+  /send-code:
+    post:
+      description: 发送验证码
+      parameters:
+      - description: user_smail
+        in: formData
+        name: mail
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: code":"200","msg":""}
+          schema:
+            type: string
+      summary: 发送验证码
       tags:
       - 公共方法
   /submit-list:
